# solution_architect

./: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py
backend/: config.py  main.py
backend/api/: conversations.py  diagrams.py  modes.py  router.py  sessions.py  ws.py
backend/db/: database.py
backend/engine/: graph_ops.py  prompts.py  tools.py
backend/models/: __init__.py  diagram.py  message.py  session.py
backend/schemas/: diagram.py  message.py  mode.py  session.py  ws.py
backend/services/: claude_client.py  conversation_engine.py  diagram_engine.py  mode_registry.py  session_manager.py  ws_manager.py
backend/tests/: conftest.py  test_api_sessions.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  sessions.ts  websocket.ts
frontend/src/components/chat/: ChatPanel.tsx  ChoiceSelector.tsx  MessageBubble.tsx
frontend/src/components/diagram/: DiagramPanel.tsx  ExportControls.tsx  MermaidViewer.tsx  NodeTypes.tsx  ReactFlowViewer.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx
frontend/src/hooks/: useSession.ts  useWebSocket.ts
frontend/src/stores/: diagramStore.ts  sessionStore.ts
frontend/src/types/: diagram.ts  message.ts  session.ts  websocket.ts
frontend/src/utils/: diagramConverter.ts  exportUtils.ts
mcp_server/: __main__.py  claude_desktop_config.example.json  diagram.py  modes.py  ollama_client.py  server.py  sessions.py
public/: index.html
webapp/: app.py
webapp/static/: index.html
(+2 files in other folders)
